# thread_sync_chaos

./: .gitignore  CMakeLists.txt  README.md  cola.c  cola.h  main.c  makefile  pantalla.h  utils.c  vehiculo.c  vehiculo.h
include/: cola.h  pantalla.h  utils.h
src/: cola.c  main.c  pantalla.c  utils.c
